[gd_scene load_steps=3 format=2]

[ext_resource path="res://Scenes/Gara/Koude.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scripts/Gara/GaraPopup.gd" type="Script" id=2]

[node name="GaraPopup" type="AcceptDialog"]
anchor_right = 0.646
anchor_bottom = 0.656
margin_right = -0.160034
margin_bottom = 0.23999
window_title = "Gara"
dialog_text = "Wait for Koude Roll !!"
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -302.0
margin_top = -293.0
margin_right = 302.0
margin_bottom = 279.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer"]
margin_right = 604.0
margin_bottom = 284.0
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="koude01" parent="VBoxContainer/HBoxContainer2" instance=ExtResource( 1 )]
margin_right = 300.0
margin_bottom = 284.0

[node name="koude02" parent="VBoxContainer/HBoxContainer2" instance=ExtResource( 1 )]
margin_left = 304.0
margin_right = 604.0
margin_bottom = 284.0

[node name="HBoxContainer3" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 288.0
margin_right = 604.0
margin_bottom = 572.0
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="koude03" parent="VBoxContainer/HBoxContainer3" instance=ExtResource( 1 )]
margin_right = 300.0
margin_bottom = 284.0

[node name="koude04" parent="VBoxContainer/HBoxContainer3" instance=ExtResource( 1 )]
margin_left = 304.0
margin_right = 604.0
margin_bottom = 284.0
